examples/tests/compile_fail/solicit_unknown_name_fail.zl
error E = _;

fun callee() >> i32 {
    i32 ret_val = 0;
    solicit E;
    return ret_val;
}

fun main() >> i32 {
    i32 x = callee() on solicit E {
        ret_val_typo = 1;
    };
    return x;
}
